# WriterV2.github.io

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  devmode.fish  stories.json  tailwind.config.js
.sqlx/: query-07b6199b50db665e1a31ded4a8612d16f230448c97a8eb301948e9f3f0955763.json  query-2dc5e20d5cc793cc639466b2a4177bb090792b553b951f524ee6f5939f992b7a.json  query-312cace7ec199361a6df0b9dc6fd308a8eaf1b9f7d0dab531164961142ba041f.json  query-40e5b26d2df5aa2cc92c1a45c47560092b4cbb50dd1aa24320afc6a729f16cfe.json  query-710176c919e6c108a8c0c982821a9c17e71ea118e5b67265136e04e2a59a5df9.json  query-bcf2aee61cbec68a6d3d964ec5de803061f81e8a36002812e9eaacee4bd2a47a.json  query-c924cd379b966e7ca47f2c8a6c97d9d641db0e8be85f6776d34c59801329f27c.json  query-cb6484175e6e0a7207510351f735379a42653230f17abf8649d944cf5e06f9ab.json
docs/: index.html  robots.txt  search_index.en.js  sitemap.xml  stories.html  stories.js  style.css  style.css.map
docs/stories/: aufbruch_und_abbruch.html  das_schweigende_spiegelbild.html  mit_gutem_gewissen.html  the_fallen_dragons_of_bavaria.html  wege_zum_tod.html  (+1 more)
migrations/: 20241026164427_init.sql  20241106161637_tagredesign.sql  20241124111952_uniquetags.sql
sass/: style.scss
src/: htmlutils.rs  images_processing.rs  main.rs
src/db/: game.rs  mod.rs  (+7 more)
static/: styles.css
stories_html/: aufbruch_und_abbruch.html  das_schweigende_spiegelbild.html  mit_gutem_gewissen.html  the_fallen_dragons_of_bavaria.html  wege_zum_tod.html  willensfreiheit_in_ketten.html
templates/: base.html  index.html  stories.html  story.html
(+7 files in other folders)
