[package]
name = "portfolio-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
pdf-extract = "0.6.4"
regex = "1.7.1"
