[package]
name = "portfolio-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
maud = { version = "0.26.0", features = ["axum"] }
axum = "0.7.5"
