[package]
name = "portfolio-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
maud = { version = "0.26.0", features = ["axum"] }
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["full", "fs"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros"] }
dotenvy = "0.15.7"
subtle = "2.6.1"
axum-extra = { version = "0.9.4", features = ["query"] }
async-trait = "0.1.83"
rand = "0.8.5"
